Change .png to .svg

--- a/Manual/Not Adjacent Letters.html
+++ b/Manual/Not Adjacent Letters.html
@@ -33,7 +33,7 @@
                 <span class="page-header-section-title">Not Adjacent Letters</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/Not Adjacent Letters.png" class="diagram">
+                <img src="img/Component/Not Adjacent Letters.svg" class="diagram">
                 <h2>On the Subject of Not Adjacent Letters</h2>
                 <p class="flavour-text"> That's weird. The buttons on this Adjacent Letters are all pressed and they seem to be stuck. Also I can peel the labels off... </p>
 
